--- a/backNotify/package.json
+++ b/backNotify/package.json
@@ -27,6 +27,7 @@
     "fs-extra": "^9.0.1",
     "knex": "^0.21.6",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.31",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.14",
     "nodemailer-express-handlebars": "^4.0.0",
