--- a/backNotify/package.json
+++ b/backNotify/package.json
@@ -5,7 +5,7 @@
   "main": "notify.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon  --ignore node_modules --exec babel-node src/notify.js ",
+    "start": "nodemon  --ignore node_modules --exec babel-node src/server.js ",
     "knex:migrate": "knex --knexfile knexfile.js migrate:latest"
   },
   "nodemonConfig": {
