--- a/backNotify/package.json
+++ b/backNotify/package.json
@@ -17,10 +17,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/cli": "^7.12.0",
-    "@babel/core": "^7.12.0",
-    "@babel/node": "^7.10.5",
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.8",
+    "@babel/node": "^7.15.8",
     "@babel/preset-env": "^7.12.0",
+    "babel-cli": "^6.26.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -31,6 +32,6 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.14",
     "nodemailer-express-handlebars": "^4.0.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.14"
   }
 }
