--- a/backNotify/package.json
+++ b/backNotify/package.json
@@ -18,12 +18,12 @@
   "license": "ISC",
   "dependencies": {
     "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.15.8",
     "@babel/node": "^7.15.8",
-    "@babel/preset-env": "^7.12.0",
+    "@babel/preset-env": "^7.15.8",
     "babel-cli": "^6.26.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fs-extra": "^9.0.1",
     "knex": "^0.21.6",
@@ -33,5 +33,9 @@
     "nodemailer": "^6.4.14",
     "nodemailer-express-handlebars": "^4.0.0",
     "nodemon": "^2.0.14"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "jest": "^27.3.1"
   }
 }
