--- a/backNotify/package.json
+++ b/backNotify/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fs-extra": "^9.0.1",
+    "handlebars": "^4.7.7",
     "knex": "^0.21.6",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
